--- a/css/intro.css
+++ b/css/intro.css
@@ -11,7 +11,6 @@ body {
   background-repeat: no-repeat;
   height: 100vh;
   width: 100vw;
-  z-index: -2;
 }
 
 .slagterforside {
@@ -19,7 +18,32 @@ body {
   position: absolute;
   bottom: 0;
   right: 9%;
-  z-index: -1;
+}
+
+.translate {
+  width: 200px;
+  height: 75px;
+  background-image: url(../img/klinkebaggrund.png);
+  background-size: cover;
+  position: absolute;
+  right: 20px;
+  box-shadow: 1px 7px 9px 5px rgba(0, 0, 0, 0.59);
+}
+
+.translate img {
+  width: 75px;
+}
+
+.britisk {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+}
+
+.dansk {
+  position: absolute;
+  right: 20px;
+  top: 20px;
 }
 
 .box {
@@ -35,6 +59,7 @@ body {
   padding-top: 10px;
   padding-right: 50px;
   padding-bottom: 50px;
+  z-index: 2;
 }
 
 .sb:before {
@@ -180,4 +205,22 @@ body {
   text-align: center;
   box-shadow: 1px 7px 9px 5px rgba(0, 0, 0, 0.59);
   text-shadow: 4px 4px rgba(0, 0, 0, 0.69);
+  cursor: pointer;
+}
+
+.introknap-animation {
+  margin-top: 5%;
+  animation: scale-in-hor-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 27.5s both;
+}
+
+@keyframes scale-in-hor-center {
+  0% {
+    transform: scaleX(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scaleX(1);
+    opacity: 1;
+  }
 }
