--- a/css/intro.css
+++ b/css/intro.css
@@ -13,7 +13,7 @@ body {
   width: 100vw;
 }
 
-.slagterforside {
+.intro-slagter {
   width: 30%;
   position: absolute;
   bottom: 0;
@@ -46,7 +46,7 @@ body {
   top: 20px;
 }
 
-.box {
+.intro-box {
   top: 150px;
   left: 90px;
   width: 1000px;
@@ -62,7 +62,7 @@ body {
   z-index: 2;
 }
 
-.sb:before {
+.intro-sb:before {
   content: "";
   width: 0px;
   height: 0px;
